..F....... [ZBXNEXT-2073] update jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new User parameter to daemon configurations that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
A......... [ZBX-7647] fixed trigger.get trying to sort by "lastchange" DESC even if a different sort field or sort order is given (Pavels)
....I..... [ZBX-7515] added missing delayed loading option of wevtapi.dll for x64 systems (igors)
...G...... [ZBX-7481] added checking for OpenBSD version to avoid compilation error on OpenBSD v5.4 and newer due to removed swapins/swapouts uvmexp fields (igors)
...G...PS. [ZBX-7618] removed partial matching for long format command line options (Juris)
..F....... [ZBX-6940] fixed frontend history links not remembering search queries (Pavels)
...GI..PS. [ZBX-5526] removed checking for PosgreSQL server version and disabled nonstandard use of escape strings in order to support versions newer than 8.1 (igors)
...G...... [ZBX-7414] added description to HostnameItem that UserParameters and aliases are not supported (igors)
...G...... [ZBX-7413] fixed concistentcy of config file handling for loading and checking userparameters and aliases before starting the daemon (igors)
...G...... [ZBX-7412] fixed alias parsing; colon symbols are now supported in alias parameters (Juris)
........S. [ZBX-7204] fixed the timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.2rc1

New features:
..F.....S. [ZBXNEXT-2069] added HOST.PORT macro support for internal and trigger based notifications (wiper, Oleg)