@@ -828,7 +828,7 @@ INDEX		|2		|groupid
 TABLE|timeperiods|timeperiodid|ZBX_SYNC,ZBX_DATA
 FIELD		|timeperiodid	|t_id		|	|NOT NULL	|0
 FIELD		|timeperiod_type|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|every		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|every		|t_integer	|'1'	|NOT NULL	|ZBX_SYNC
 FIELD		|month		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|dayofweek	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|day		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
@@ -1303,4 +1303,4 @@ INDEX		|2		|templateid
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|2030000	|2030000
+ROW		|2030001	|2030001
